# sketch_tnc

./: .gitignore  README.md  conf.py  pyproject.toml  requirements.txt  run.py
config/block/: default.yaml
config/data/: chain.yaml  (+1 more)
configs/: config.yaml
examples/: custom_graph.yaml
latex-en/: head.tex  main.aux  main.bbl  main.blg  main.out  main.tex  ref.bib
paper/: .latexmkrc  CHANGES.md  head.tex  paper.aux  paper.bbl  paper.bbl-SAVE-ERROR  paper.bcf  paper.bcf-SAVE-ERROR  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.run.xml  paper.tex  paper.xdv  ref.bib  results.lnk  xelatex15688.fls  xelatex32792.fls
reproduce/: plot_strengthened_figures.py  run_paper_experiments.py  run_strengthened_small_experiments.py
results/: ablation_core_agg.csv  ablation_core_raw_runs.csv  ablation_core_summary.md  ablation_core_tables.md  benchmark_protocol.md  benchmark_recommendation.md  gain_breakdown_agg.csv  gain_breakdown_raw.csv  gain_breakdown_summary.md  gain_breakdown_tables.md  generalization_agg.csv  generalization_raw_runs.csv  generalization_summary.md  generalization_tables.md  main_results_agg.csv  main_results_raw_runs.csv  main_results_summary.md  main_results_tables.md  pilot_agg.csv  pilot_raw_runs.csv  run_ablation_core.py  run_gain_breakdown.py  run_generalization.py  run_main_results.py  run_pilot.py  run_strength_sensitivity.py  setup_notes.md  strength_sensitivity_agg.csv  strength_sensitivity_raw_runs.csv  strength_sensitivity_summary.md  strength_sensitivity_tables.md
src/: __init__.py  block.py  metrics.py  types.py  utils.py
(+86 files in other folders)
